--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/images/logo.jpg" />
+    <link rel="icon" type="image" href="/images/logo1.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BREAK: Donde la Diversión Nunca Termina</title>
     <link
